# ModelCompose

./: .gitignore  README.md  demo_app.py  pyproject.toml  requirements.txt
modelcompose/: constants.py  mm_utils.py  utils.py
modelcompose/data/: __init__.py  data.py  multimodal_dataset.py  utils.py
modelcompose/eval/: convert_mm_output_to_coco.py  convert_mm_output_to_pointllm.py  eval_audioclip_mm.py  eval_avqa.py  eval_captioning.py  eval_gpt_review_bench.py  eval_gpt_review_bench_thumt.py  eval_gpt_review_visual.py  eval_msrvtt_mm.py  eval_msrvtt_qa.py  eval_music_avqa.py  eval_textvqa.py  model_multimodal_qa_loader.py  model_qa.py  model_vqa.py  model_vqa_loader.py  model_vqa_loss.py  model_vqa_mmbench.py  model_vqa_science.py  run_llava.py
modelcompose/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  local_llava_arch.py  make_delta.py  multimodal_arch.py
modelcompose/serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py  test_message.py
modelcompose/train/: llava_trainer.py  local_llava_flash_attn_monkey_patch.py  multimodal_flash_attn_monkey_patch.py  train.py  train_local_llava.py  train_mem.py  train_multimodal.py
scripts/: convert_seed_for_submission.py  convert_to_multimodal.py  convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py  evaluate_delta_weights.py  merge_lora_weights.py  merge_mm_projectors.py
scripts/convert_llava_to_multimodal/: check_multimodal_exist.py  convert_checkpoint.py  convert_test_data.py  merge_image_audio_to_multimodal.py
scripts/model_composition/: analysis.py  (+6 more)
(+62 files in other folders)
