[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modelcompose"
version = "1.0.0"
description = "Model Composition for Multimodal Large Language Models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.0.1", "torchvision==0.15.2", "torchaudio==2.0.2",
    "transformers==4.31.0", "sentencepiece==0.1.99",
    "shortuuid", "accelerate==0.21.0", "peft==0.4.0",
    "bitsandbytes==0.41.0", "pydantic", "markdown2[all]",
    "numpy", "scikit-learn==1.2.2", "gradio==4.16.0",
    "gradio_client==0.8.1", "requests", "httpx==0.24.0",
    "uvicorn", "fastapi", "einops==0.6.1",
    "einops-exts==0.0.4", "timm==0.6.13", "deepspeed==0.12.6",
    "ninja", "wandb", "build", "twine",
    "pytorchvideo==0.1.5", "ftfy", "regex", "fvcore",
    "decord==0.6.0", "iopath", "matplotlib", "types-regex",
    "vtk", "mayavi", "cartopy", "moviepy", "omegaconf",
    "librosa", "opencv-python", "easydict"
]

[project.urls]
"Homepage" = "https://github.com/THUNLP-MT/ModelCompose"
"Bug Tracker" = "https://github.com/THUNLP-MT/ModelCompose/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
